@@ -1,3 +1,7 @@
+2010-05-30  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #14522: Pagetree workspace div correction
+
 2010-05-30  Oliver Hader  <oliver@typo3.org>
 
 	* Added feature #14383: Integrate hooks to backend.php to perform several customizations
